<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/paymentLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/customer_information"
        android:textSize="24sp"
        android:textStyle="bold"
        android:id="@+id/custinfotext"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_height="150dp"
        android:src="@drawable/card_image"
        android:layout_below="@id/custinfotext"
        android:id="@+id/payment_image"/>
    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/cardEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/card_number"
        android:inputType="number"
        android:maxLength="16"
        android:digits="0123456789 " />
    <EditText
        android:id="@+id/secuirtycode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/cvv"
        android:password="true"
        android:inputType="number"
        android:maxLength="3"
        android:digits="0123456789 "
        tools:ignore="Deprecated" />

    <EditText
        android:id="@+id/expdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/expiry_date_mm_yy"
        android:maxLength="5"
        android:inputType="date" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/favorite_sport"
        android:textSize="18sp" />

    <RadioGroup
        android:id="@+id/sportRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/basketballRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/basketball" />

        <RadioButton
            android:id="@+id/footballRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/football" />

        <RadioButton
            android:id="@+id/baseballRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cricket" />

    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/favorite_team"
        android:textSize="18sp" />

    <Spinner
        android:id="@+id/teamSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/team_prompt" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/favorite_food"
        android:textSize="18sp" />

    <Spinner
        android:id="@+id/foodSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/food_prompt" />

    <Button
        android:id="@+id/payButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pay" />

</LinearLayout>
