<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/purple_700"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:titleTextColor="@color/white"
        tools:ignore="MissingConstraints" />

    <TextView
        android:layout_width="match_parent"
        android:id="@+id/houseoptionhint"
        android:layout_height="match_parent"
        android:text="@string/select_house_type_from_above_menu_options"
        android:gravity="center"
        android:textSize="50dp"
        android:textColor="@color/black"
        tools:ignore="MissingConstraints" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/homeRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:clipToPadding="false"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@id/checkBox1"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintVertical_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="16dp" />

    <CheckBox
        android:id="@+id/checkBox1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkBox1_text"
        app:layout_constraintTop_toBottomOf="@+id/homeRecyclerView"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:visibility="gone"/>

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkBox2_text"
        app:layout_constraintTop_toBottomOf="@+id/homeRecyclerView"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:visibility="gone"/>

    <Button
        android:id="@+id/select_homes_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_homes_button_text"
        android:textColor="@color/white"
        android:background="@color/white"
        android:elevation="4dp"
        android:stateListAnimator="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/checkBox1"/>

</androidx.constraintlayout.widget.ConstraintLayout>
